--- a/docs/lib/sage-frontend/stylesheets/docs/_quick_links.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_quick_links.scss
@@ -5,8 +5,8 @@
 ================================================== */
 
 $-quick-links-color-text: var(--pine-color-grey-900);
-$-quick-links-color-focus: var(--pine-color-primary-300);
-$-quick-links-color-background: var(--pine-color-primary-200);
+$-quick-links-color-focus: var(--pine-color-blue-300);
+$-quick-links-color-background: var(--pine-color-blue-200);
 
 .quick-links {
   position: sticky;
