--- a/docs/lib/sage-frontend/stylesheets/docs/_rouge_theme.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_rouge_theme.scss
@@ -25,9 +25,9 @@ $-color-4: var(--pine-color-red-500);
 // Generic deleted?
 $-color-8: var(--pine-color-red-300);
 // Escape string
-$-color-25: var(--pine-color-orange-200);
+$-color-25: var(--pine-color-mercury-200);
 // Regex/interpolation
-$-color-26: var(--pine-color-orange-200);
+$-color-26: var(--pine-color-mercury-200);
 // Preproc comment
 $-color-7: var(--pine-color-grey-800);
 // Highlight?
@@ -35,21 +35,21 @@ $-color-2: var(--pine-color-yellow-150);
 // Name label
 $-color-22: var(--pine-color-yellow-400);
 // Keywords and built ins, tag names
-$-color-5: var(--pine-color-sage-300);
+$-color-5: var(--pine-color-green-300);
 // Generic inserted?
-$-color-10: var(--pine-color-primary-200);
+$-color-10: var(--pine-color-blue-200);
 // Output
-$-color-11: var(--pine-color-primary-200);
+$-color-11: var(--pine-color-blue-200);
 // Name attribute
-$-color-16: var(--pine-color-sage-200);
+$-color-16: var(--pine-color-green-200);
 // Tracebake
-$-color-13: var(--pine-color-primary-200);
+$-color-13: var(--pine-color-blue-200);
 // Class, function, namespace
-$-color-17: var(--pine-color-sage-200);
+$-color-17: var(--pine-color-green-200);
 // Name decorator and word operator
 $-color-19: var(--pine-color-purple-300);
 // Variables
-$-color-23: var(--pine-color-primary-300);
+$-color-23: var(--pine-color-blue-300);
 
 
 .highlight {
