--- a/packages/sage-assets/lib/stylesheets/components/_dynamic_select.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_dynamic_select.scss
@@ -6,8 +6,8 @@ $-dynamic-select-color-success: map-get($sage-field-colors, success);
 $-dynamic-select-border-box-shadow-size: map-get($sage-field-configs, box-shadow-size);
 $-dynamic-select-selected-height: rem(54px);
 $-dynamic-select-selected-padding: rem(12px) sage-spacing(sm) 0;
-$-dynamic-select-selected-tag-color: var(--pine-color-primary-200);
-$-dynamic-select-selected-tag-background-color: var(--pine-color-primary-100);
+$-dynamic-select-selected-tag-color: var(--pine-color-blue-200);
+$-dynamic-select-selected-tag-background-color: var(--pine-color-blue-100);
 $-dynamic-select-selected-tag-border-radius: sage-border(radius-x-large);
 $-dynamic-select-selected-tag-padding: 0 sage-spacing(xs);
 $-dynamic-select-selected-tag-height: rem(30px);
