--- a/packages/sage-assets/lib/stylesheets/components/_tabs.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_tabs.scss
@@ -81,6 +81,6 @@
   position: relative;
 
   .sage-tab--active {
-    background-color: sage-color(white);
+    background-color: var(--pine-color-white);
   }
 }
