--- a/packages/sage-assets/lib/stylesheets/components/_tooltip.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_tooltip.scss
@@ -8,7 +8,7 @@
 // Colors
 $-tooltip-bg-color: var(--pine-color-grey-900);
 $-tooltip-light-bg-color: $-tooltip-bg-color;
-$-tooltip-font-color: sage-color(white);
+$-tooltip-font-color: var(--pine-color-white);
 $-tooltip-light-font-color: $-tooltip-font-color;
 
 // Indicator arrow
