--- a/docs/lib/sage-frontend/stylesheets/docs/_sidebar.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_sidebar.scss
@@ -21,5 +21,5 @@
 // Side Navigation Footer Top Border
 // Visual division between the scrolling content and the footer
 .sage-sidebar__footer {
-  box-shadow: inset 0 1px 0 sage-color(grey);
+  box-shadow: inset 0 1px 0 var(--pine-color-grey-500);
 }
