--- a/docs/lib/sage-frontend/stylesheets/docs/_status_table.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_status_table.scss
@@ -4,7 +4,7 @@
   For Sage documentation use
 ================================================== */
 
-$-status-table-border: rem(2px) solid sage-color(grey);
+$-status-table-border: rem(2px) solid var(--pine-color-grey-500);
 $-status-table-cell-padding: sage-spacing(xs) sage-spacing(sm);
 $-status-table-heading-color: var(--pine-color-grey-600);
 $-status-table-heading-font-size: sage-font-size(body-sm);
