--- a/packages/sage-assets/lib/stylesheets/components/_assistant.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_assistant.scss
@@ -20,7 +20,7 @@ $-assistant-search-placeholder-transition: color 0.15s ease-in-out, opacity 0.15
   z-index: sage-z-index(nav);
   height: $-assistant-height;
   padding: sage-spacing(xs) sage-spacing();
-  background: var(--pine-color-primary-500);
+  background: var(--pine-color-blue-500);
 }
 
 .sage-assistant__branding {
