--- a/packages/sage-assets/lib/stylesheets/components/_data_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_data_card.scss
@@ -21,7 +21,7 @@ $-data-card-colors: (
 );
 $-data-card-transition: 0.2s linear;
 $-data-card-border-radius: sage-border(radius);
-$-data-card-background-color: sage-color(white);
+$-data-card-background-color: var(--pine-color-white);
 $-data-card-padding: sage-spacing(xs);
 
 
