--- a/packages/sage-assets/lib/stylesheets/components/_form_select.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_select.scss
@@ -7,12 +7,12 @@
 $-select-border-box-shadow-size: map-get($sage-field-configs, box-shadow-size);
 $-select-color-border: var(--pine-color-grey-500);
 $-select-color-border-hover: var(--pine-color-grey-600);
-$-select-color-border-selected: var(--pine-color-primary-200);
+$-select-color-border-selected: var(--pine-color-blue-200);
 $-select-color-default: var(--pine-color-grey-700);
 $-select-color-default-hover: var(--pine-color-grey-900);
 $-select-color-error: var(--pine-color-red-500);
-$-select-color-label-background: sage-color(white);
-$-select-color-success: var(--pine-color-primary-200);
+$-select-color-label-background: var(--pine-color-white);
+$-select-color-success: var(--pine-color-blue-200);
 $-select-filled-top-padding: rem(4.4px);
 $-select-height: rem(40px);
 $-select-padding-x: sage-spacing(sm);
