--- a/packages/sage-assets/lib/stylesheets/components/_panel.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_panel.scss
@@ -56,7 +56,7 @@
     padding: 0 sage-spacing(sm);
     color: var(--pine-color-grey-600);
     font-size: sage-font-size(body-xs);
-    background-color: sage-color(white);
+    background-color: var(--pine-color-white);
   }
 }
 
