--- a/packages/sage-assets/lib/stylesheets/components/_stat_box.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_stat_box.scss
@@ -12,7 +12,7 @@ $-stat-box-image-max-width: rem(48px);
   padding: rem(18px) sage-spacing(sm);
   border-radius: sage-border(radius-large);
   box-shadow: sage-shadow(100);
-  background-color: sage-color(white);
+  background-color: var(--pine-color-white);
 
   .sage-card &,
   .sage-panel & {
