--- a/packages/sage-assets/lib/stylesheets/components/_switch.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_switch.scss
@@ -43,7 +43,7 @@ $-switch-toggle-size: rem(16px);
     border: sage-border();
     border-radius: sage-border(radius);
     box-shadow: sage-shadow(100);
-    background-color: sage-color(white);
+    background-color: var(--pine-color-white);
 
     .sage-card &,
     .sage-panel & {
@@ -144,7 +144,7 @@ $-switch-toggle-size: rem(16px);
     transform: translate3d(-100%, -50%, 0);
     height: $-switch-toggle-size;
     width: $-switch-toggle-size;
-    background: sage-color(white);
+    background: var(--pine-color-white);
     border-radius: sage-border(radius-round);
     box-shadow: sage-shadow(sm);
     transition: transform 0.2s ease-in-out;
