--- a/packages/sage-assets/lib/stylesheets/core/_typography.scss
+++ b/packages/sage-assets/lib/stylesheets/core/_typography.scss
@@ -193,10 +193,10 @@ body:not(.sage-excluded),
   // Hyperlinks get some default coloring applied
   > a:not([class]),
   > a[class*="sage-link"] {
-    color: var(--pine-color-primary-300);
+    color: var(--pine-color-blue-300);
 
     &:hover {
-      color: var(--pine-color-primary-400);
+      color: var(--pine-color-blue-400);
     }
   }
 
