--- a/packages/sage-assets/lib/stylesheets/tokens/_border_interactive.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_border_interactive.scss
@@ -11,7 +11,7 @@
 $sage-borders-interactive: (
   default: 0 0 0 1px var(--pine-color-grey-300),
   hover: 0 0 0 1px var(--pine-color-grey-500),
-  focus: 0 0 0 4px var(--pine-color-primary-200),
+  focus: 0 0 0 4px var(--pine-color-blue-200),
   selected: 0 0 0 4px var(--pine-color-grey-900),
   error: 0 0 0 1px var(--pine-color-red-500),
   error-focus: 0 0 0 4px var(--pine-color-red-500),
